[ITB-680] Create REST alternative for SOAP GITB APIs
